--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 title: Payments Remastered | Everpay
 email: hello@everpayinc.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Everpay provides merchant account and payment solutions for businesses worldwide.
 include: ["_pages"]
 permalink: /:title/
 twitter_username: everpay
-github_username:  everpay
+github_username:  Everpay
+linkedin_username: everpay
+facebook_username: everpay
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://cranky-goldberg-9be656.netlify.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
