--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Payments Remastered | Everpay
+title: Everpay | Payments Remastered
 email: hello@everpayinc.com
 description: > # this means to ignore newlines until "baseurl:"
-  Everpay provides merchant account and payment solutions for businesses worldwide.
+  Everpay provides merchant account and payment solutions for all business types worldwide.
 include: ["_pages"]
 permalink: /:title/
 twitter_username: everpay
