--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Payments Remastered
+title: EverPay
 email: hello@everpayinc.com
 description: > # this means to ignore newlines until "baseurl:"
   Everpay provides merchant account and payment solutions for all business types worldwide.
